<resources>
    <string name="app_name">Bus Ticket System</string>
    <string name="action_profile">Profile</string>
    <string name="action_administration">Administration</string>
    <string name="action_logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="search">Search</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    /// its my area
    <string name="splash_text">Have a nice journey.</string>
    <string name="todo">TODO</string>
    <string name="enter_city">Enter City</string>
    <string name="pick_your_journey_date">Pick your journey date</string>
    <string name="select_your_journey_date">Select your journey date</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">01700-000000</string>
    <string name="phoneText">Phone</string>
    <string name="remember_password">Remember Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="you_have_no_account_sign_up"><i>You have no account?</i></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Sign Up</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="carName">car name</string>
    <string name="acornon">ac/ non ac</string>
    <string name="select_start_time">select start time</string>
    <string name="submit">Submit</string>
    <string name="ok">OK</string>
    <string name="select_end_time">select end time</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="carId">car serial id</string>
    <string name="SAVE_ID">SAVE_ID_FOR_NEXT_UPLOAD</string>
    <string name="SAVE_SEARCHING_ID">SAVE_SEARCHING_ID_FOR_SEARCH_ITEM</string>
    <string name="seatRent">Seat Rent</string>
    <string name="carPriceSample">850 TK</string>
    <string name="departure_time">Departure Time</string>
    <string name="arrivalTime">Arrival Time</string>
    <string name="timeSample1">10:00 AM</string>
    <string name="timeSample2">7:00 PM</string>
    <string name="lastUploadSerial">last upload serial</string>
    <string name="btnContinue">Continue</string>
    <string name="vehiclesInformation">Vehicles Information</string>
    <string name="journeyDateTime">Date &amp; Time</string>
    <string name="coachType">Coach Type</string>
    <string name="select_seat_plan">Choose Seat Plan</string>
    <string name="seatNo">Seat No</string>
    <string name="holderInformation">Ticket Holder Information</string>
    <string name="paymentInformation">Payment Information</string>


</resources>