<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120sp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10sp"
        app:cardElevation="10sp"
        android:layout_margin="5sp"
        app:cardBackgroundColor="#F4F4F4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="2sp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/car_item_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/imagescar"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0sp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="8sp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/car_item_name"
                        android:layout_width="0sp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/car_item_price"
                        android:layout_width="0sp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/carPriceSample"
                        android:textSize="12sp"
                        android:textColor="@color/purple_500"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/car_item_acorno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/acornon"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0sp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/departure_time"
                        android:textSize="12sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="0sp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/arrivalTime"
                        android:textSize="12sp"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/car_item_d_time"
                        android:layout_width="0sp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/timeSample1"
                        android:textSize="12sp"
                        android:textColor="@color/purple_500"/>

                    <TextView
                        android:id="@+id/car_item_a_time"
                        android:layout_width="0sp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/timeSample2"
                        android:textSize="12sp"
                        android:textColor="@color/purple_500"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/car_item_from"
                        android:layout_width="0sp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/from"
                        android:textSize="12sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/car_item_to"
                        android:layout_width="0sp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/to"
                        android:textSize="12sp"
                        android:textColor="@color/black"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>