<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.registration.SignIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:src="@drawable/login"
            app:tint="@color/purple_500" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/edit_text_log_email"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_margin="10dp"
            android:paddingStart="2sp"
            android:paddingEnd="0sp"
            android:background="@drawable/email_round"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            app:drawableTint="@color/purple_500"
            android:hint="@string/email"
            android:singleLine="true"
            android:maxLines="1"
            android:layout_gravity="start|center"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textColorHighlight="@color/white"/>

        <EditText
            android:id="@+id/edit_text_log_password"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:inputType="textPassword"
            android:layout_margin="10dp"
            android:paddingStart="2sp"
            android:paddingEnd="0sp"
            android:background="@drawable/email_round"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            app:drawableTint="@color/purple_500"
            android:hint="@string/password"
            android:layout_gravity="start|center"
            android:textSize="12sp"
            android:singleLine="true"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textColorHighlight="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10sp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_remember_password"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:text="@string/remember_password"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_marginTop="0dp"
                android:textColor="@color/black"
                android:buttonTint="@color/purple_500"
                android:checked="true"/>
            <TextView
                android:id="@+id/text_forget_password"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:text="@string/forget_password"
                android:textSize="12sp"
                android:paddingStart="10sp"
                android:paddingEnd="0sp"
                android:gravity="start|center"
                android:drawableStart="@drawable/ic_baseline_lock_open_24"
                android:textColor="@color/black"
                app:drawableTint="@color/purple_500"
                android:drawablePadding="6dp"/>


        </LinearLayout>

    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0sp"
       android:layout_weight="1"
       android:gravity="top|center"
       android:orientation="vertical">

       <Button
           android:id="@+id/btn_log_in"
           android:layout_width="150sp"
           android:layout_height="45sp"
           android:textColor="@color/white"
           android:text="@string/log_in"
           android:textAllCaps="false"
           android:shadowColor="@android:color/transparent"
           android:layout_marginTop="10sp"
           android:background="@drawable/login_round"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:gravity="center"
           android:layout_marginTop="10sp">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/you_have_no_account_sign_up"
               android:textColor="@color/purple_500"/>

           <TextView
               android:id="@+id/txt_sign_up"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="5sp"
               android:text="@string/sign_up"
               android:textColor="@color/red"/>

       </LinearLayout>

   </LinearLayout>


</LinearLayout>