<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp"
    tools:context=".view.admin.AdminDashboard"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10sp"
            android:paddingTop="5sp"
            android:paddingBottom="10sp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_car"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/imagescar"/>


            <TextView
                android:id="@+id/txt_last_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastUploadSerial"
                android:layout_marginStart="10sp"
                android:paddingStart="2sp"
                android:textSize="10sp"
                android:textStyle="italic"
                android:textColor="@color/purple_500"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_text_id"
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="45sp"
                    android:inputType="number"
                    android:layout_margin="10dp"
                    android:paddingStart="2sp"
                    android:paddingEnd="0sp"
                    android:background="@drawable/round_edittext"
                    android:drawableStart="@drawable/ic_baseline_id"
                    android:drawablePadding="10dp"
                    app:drawableTint="@color/purple_500"
                    android:hint="@string/carId"
                    android:layout_gravity="start|center"
                    android:textSize="12sp"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textColorHighlight="@color/white"/>

                <EditText
                    android:id="@+id/edit_text_seat_rent"
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="45sp"
                    android:inputType="number"
                    android:layout_margin="10dp"
                    android:paddingStart="2sp"
                    android:paddingEnd="0sp"
                    android:background="@drawable/round_edittext"
                    android:drawableStart="@drawable/ic_baseline_currency"
                    android:drawablePadding="10dp"
                    app:drawableTint="@color/purple_500"
                    android:hint="@string/seatRent"
                    android:layout_gravity="start|center"
                    android:textSize="12sp"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textColorHighlight="@color/white"/>

            </LinearLayout>

            <EditText
                android:id="@+id/edit_text_car_name"
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:layout_margin="10dp"
                android:paddingStart="2sp"
                android:paddingEnd="0sp"
                android:background="@drawable/round_edittext"
                android:drawableStart="@drawable/ic_baseline_directions_car"
                android:drawablePadding="10dp"
                app:drawableTint="@color/purple_500"
                android:hint="@string/carName"
                android:layout_gravity="start|center"
                android:textSize="12sp"
                android:singleLine="true"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textColorHighlight="@color/white"/>

            <EditText
                android:id="@+id/edit_text_ac_or_non"
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:layout_margin="10dp"
                android:paddingStart="2sp"
                android:paddingEnd="0sp"
                android:background="@drawable/round_edittext"
                android:drawableStart="@drawable/ic_baseline_ac"
                android:drawablePadding="10dp"
                app:drawableTint="@color/purple_500"
                android:hint="@string/acornon"
                android:layout_gravity="start|center"
                android:textSize="12sp"
                android:singleLine="true"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textColorHighlight="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textSize="12sp"
                android:layout_marginStart="12sp"
                android:textColor="@color/purple_500"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:elevation="0sp"
                android:layout_margin="10sp"
                android:paddingStart="2sp"
                android:paddingEnd="0sp"
                app:cardCornerRadius="5dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/purple_500">

                <Spinner
                    android:id="@+id/spinner_from_city"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="12sp"
                android:layout_marginStart="12sp"
                android:textColor="@color/purple_500"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:elevation="0sp"
                android:layout_margin="10sp"
                android:paddingStart="2sp"
                android:paddingEnd="0sp"
                app:cardCornerRadius="5dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/purple_500">

                <Spinner
                    android:id="@+id/spinner_to_city"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_start_time"
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="45sp"
                    android:background="@drawable/round_edittext"
                    android:drawablePadding="10sp"
                    android:drawableTint="@color/purple_500"
                    android:hint="@string/select_start_time"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="12sp"
                    android:layout_margin="10sp"
                    android:paddingStart="2sp"
                    android:paddingEnd="0sp"
                    android:gravity="center|left"
                    app:drawableStartCompat="@drawable/calendar_today_24" />

                <TextView
                    android:id="@+id/txt_end_time"
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="45sp"
                    android:background="@drawable/round_edittext"
                    android:drawablePadding="10sp"
                    android:drawableTint="@color/purple_500"
                    android:hint="@string/select_end_time"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="12sp"
                    android:layout_margin="10sp"
                    android:paddingStart="2sp"
                    android:paddingEnd="0sp"
                    android:gravity="center|left"
                    app:drawableStartCompat="@drawable/calendar_today_24" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="150sp"
                android:layout_height="45sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/email_round"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:text="@string/submit"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>