<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FirstFragment"
    android:orientation="vertical"
    android:padding="5sp">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Your Destination"
        android:layout_gravity="center"
        android:textColor="@color/purple_500"/>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/gray"
        android:layout_marginTop="5sp"
        card_view:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:orientation="vertical"
                android:layout_marginTop="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="18sp"
                    android:text="@string/from"
                    android:textSize="12sp"
                    android:textColor="@color/purple_500"/>

                <EditText
                    android:id="@+id/edit_text_from_city"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:hint="@string/enter_city"
                    android:textSize="12sp"
                    android:background="@drawable/round_edittext"
                    android:drawableStart="@drawable/location_on_24"
                    android:drawablePadding="5sp"
                    android:drawableTint="@color/purple_500"
                    android:maxLines="1"
                    android:singleLine="true"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:orientation="vertical"
                android:layout_marginTop="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="18sp"
                    android:text="@string/to"
                    android:textSize="12sp"
                    android:textColor="@color/purple_500"/>

                <EditText
                    android:id="@+id/edit_text_to_city"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:hint="@string/enter_city"
                    android:textSize="12sp"
                    android:background="@drawable/round_edittext"
                    android:drawableStart="@drawable/location_on_24"
                    android:drawablePadding="5sp"
                    android:drawableTint="@color/purple_500"
                    android:maxLines="1"
                    android:singleLine="true"/>


            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view1"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/gray"
        android:layout_marginTop="10sp"
        card_view:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:orientation="vertical"
                android:layout_marginTop="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="18sp"
                    android:text="@string/pick_your_journey_date"
                    android:textSize="12sp"
                    android:textColor="@color/purple_500"/>

                <TextView
                    android:id="@+id/edit_text_date_picker"
                    android:layout_width="match_parent"
                    android:paddingStart="5sp"
                    android:paddingEnd="5sp"
                    android:layout_height="40sp"
                    android:hint="@string/select_your_journey_date"
                    android:gravity="center|start"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:background="@drawable/round_edittext"
                    android:drawableTint="@color/purple_500"
                    android:maxLines="1"
                    android:singleLine="true"
                    app:drawableEndCompat="@drawable/calendar_today_24" />


            </LinearLayout>

            <Button
                android:id="@+id/button_search"
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:layout_marginTop="10sp"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:drawableLeft="@drawable/search_24"
                android:drawableTint="@color/white"
                android:text="@string/search"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>



</LinearLayout>