<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.profile.Profile_update"
    android:orientation="vertical"
    android:padding="20sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_update_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/account_circle_24"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp">

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_margin="10dp"
            android:paddingStart="2sp"
            android:paddingEnd="0sp"
            android:background="@drawable/profile_round"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            app:drawableTint="@color/purple_500"
            android:hint="@string/name"
            android:layout_gravity="start|center"
            android:textSize="12sp"
            android:singleLine="true"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textColorHighlight="@color/white"/>

        <EditText
            android:id="@+id/edit_text_phone"
            android:layout_width="match_parent"
            android:inputType="phone"
            android:layout_height="45sp"
            android:layout_margin="10dp"
            android:paddingStart="2sp"
            android:paddingEnd="0sp"
            android:background="@drawable/profile_round"
            android:drawableStart="@drawable/ic_baseline_call"
            android:drawablePadding="10dp"
            app:drawableTint="@color/purple_500"
            android:hint="@string/phone"
            android:layout_gravity="start|center"
            android:textSize="12sp"
            android:singleLine="true"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textColorHighlight="@color/white"/>

        <EditText
            android:id="@+id/edit_text_address"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_margin="10dp"
            android:paddingStart="2sp"
            android:paddingEnd="0sp"
            android:background="@drawable/email_round"
            android:drawableStart="@drawable/ic_baseline_home"
            android:drawablePadding="10dp"
            app:drawableTint="@color/purple_500"
            android:hint="@string/address"
            android:layout_gravity="start|center"
            android:textSize="12sp"
            android:singleLine="true"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textColorHighlight="@color/white"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/btn_profile_update"
            android:layout_width="200sp"
            android:layout_height="45sp"
            android:textColor="@color/white"
            android:text="@string/update"
            android:textAllCaps="false"
            android:shadowColor="@android:color/transparent"
            android:layout_marginTop="10sp"
            android:background="@drawable/profile_round"/>

    </LinearLayout>



</LinearLayout>